# elidan-pintech

./: .gitignore  .pre-commit-config.yaml  BUILD  README.md  pants.toml  start-pintech.sh
build_support/: .mypy.ini
scripts/: expose_library_roots_to_ide.sh  expose_source_roots_to_ide.sh
src/common/: BUILD  logger.py
src/docker/mongo/: BUILD  README.md  docker-compose.yml  start_mongodb.sh
src/docker/pintech_api-server/: BUILD  Dockerfile
src/python/common/: BUILD  logger.py  pyproject.toml  utils.py
src/python/config/: BUILD  configuration.py  pyproject.toml  settings.toml
src/python/config/environments/: development.toml  production.toml  staging.toml
src/python/services/pintech_api/: .mypy.ini  BUILD  config.py  main.py  migrate.py  pyproject.toml  uvicorn_disable_logging.json
src/python/tests/: BUILD  README.md  test_api.py  test_utils.py
src/services/pintech_api/: .mypy.ini  BUILD  main.py  pyproject.toml
src/tests/: BUILD  unit_tests.py
